<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XiXi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">XiXi</string>
    <string name="title_activity_magpie">Magpie Bridge</string>
    <string name="title_activity_message">Private Message</string>
    <string name="title_activity_new_circle">Publish Circle</string>
    <string name="title_activity_new_magpie">Publish Magpie</string>
    <string name="title_activity_circle">Circle</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_intro">Introduction</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_image_browse">Browse Image</string>
    <string name="title_activity_local_image_show">Show Image</string>

    <string name="btn_add_photo">Add Photo</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_new_circle">Publish Circle</string>
    <string name="btn_new_magpie">Publish Magpie</string>
    <string name="btn_notify">notification</string>
    <string name="btn_private_message">Private Message</string>
    <string name="btn_send">Send</string>
    <string name="btn_upload">Upload</string>

    <string name="error_empty_content">can not be empty</string>
    <string name="error_empty_image">please select image</string>
    <string name="error_image_exceed">at most 3 images at one time</string>
    <string name="error_image_unique">only one image is allowed</string>
    <string name="error_network">Network Error</string>

    <string name="txt_age">Age</string>
    <string name="txt_basic">Basic</string>
    <string name="txt_circle">Circle</string>
    <string name="txt_condition">Condition</string>
    <string name="txt_help">Help</string>
    <string name="txt_hobby">Hobby</string>
    <string name="txt_label">Label</string>
    <string name="txt_loading">Loading</string>
    <string name="txt_message">Message</string>
    <string name="txt_nickname">Nickname</string>
    <string name="txt_no_more_data">No More Data</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_reply">Reply</string>
    <string name="txt_school">School</string>
    <string name="txt_send_successfully">Send Successfully</string>
    <string name="txt_sending">Sending</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_sex">Sex</string>
    <string name="txt_title">Title</string>
    <string name="txt_uploading">Uploading</string>
    <string name="txt_weekend">Weekend</string>
    <string name="title_activity_chat">ChatActivity</string>

</resources>
