<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xixi.ui.MainActivity">

    <item
        android:id="@+id/action_notify"
        android:icon="@drawable/ic_action_notify"
        android:title="@string/btn_notify"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_magpie"
        android:title="@string/btn_new_magpie"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_circle"
        android:title="@string/btn_new_circle"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>