<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xixi.ui.main.DiscoverFragment">

    <LinearLayout
        android:id="@+id/ll_circle"
        style="@style/item_im_tv"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/item_im_tv_left"
            android:src="@drawable/ic_discover_circle"/>

        <TextView
            style="@style/item_im_tv_right"
            android:text="@string/txt_circle"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weekend"
        style="@style/item_im_tv"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/item_im_tv_left"
            android:src="@drawable/ic_discover_weekend"/>

        <TextView
            style="@style/item_im_tv_right"
            android:text="@string/txt_weekend"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_help"
        style="@style/item_im_tv"
        android:layout_marginTop="1dp">

        <ImageView
            style="@style/item_im_tv_left"
            android:src="@drawable/ic_discover_help"/>

        <TextView
            style="@style/item_im_tv_right"
            android:text="@string/txt_help"/>

    </LinearLayout>

</LinearLayout>