<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lihao.ui.main.MagpieFragment">


    <LinearLayout
        android:id="@+id/ll_profile"
        style="@style/item_im_tv"
        android:layout_marginTop="20dp">

        <com.xixi.widget.CircleImageView
            android:id="@+id/header"
            style="@style/item_im_tv_left"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_zhanjun"/>

        <TextView
            style="@style/item_im_tv_right"
            android:text="@string/txt_profile"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_messages"
        style="@style/item_im_tv"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/item_im_tv_left"
            android:src="@drawable/ic_me_messages"/>

        <TextView
            style="@style/item_im_tv_right"
            android:text="@string/txt_message"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_settings"
        style="@style/item_im_tv"
        android:layout_marginTop="20dp">

        <ImageView
            style="@style/item_im_tv_left"
            android:src="@drawable/ic_me_setting"/>

        <TextView
            style="@style/item_im_tv_right"
            android:text="@string/txt_settings"/>

    </LinearLayout>

</LinearLayout>
